New function Invoke-gh for invoking GitHub CLI commands from PowerShell
New function Invoke-git for invoking Git commands from PowerShell
Display warning if DisabledTests contains codeunit with a comma in the name (not supported for disabling tests)
Issue #2533 Import-BcContainerLicenseFile doesn't support secure URL's with query parameters

3.0.10
Issue #2457 Convert-BcAppsToRuntimePackages: allow to set showmycode, keepContainer, include sign app parameters

3.0.9
Issue #2423 Export-ModifiedObjectsAsDeltas fails with Could not find a part of the path.
Issue #2457 Add parameters -showMyCode and -IncludeSourceInPackageFile to Convert-BcAppsToRuntimePackages
Issue #2429 Use vsixFile in the container for anything but current validation to catch runtime setting in app.json error
Improve Out of memory detection when running using docker exec (usePsSession = $false)
Improve Invoke-ScriptInBcContainer when running using docker exec (usePsSession = $false)
- Add try/catch inside script block to catch error better
Add possible kill switch for pssessions (avoid hanging Remove-BcContainerSessions) - default off
Support for obsoleteTagMinAllowedMajorMinor (AS0105) in Run-AlCops, Run-AlValidation and Run-AlPipeline
Use a PowerShell Job to run bcpt tests to be able to remove files afterwards
Allow Get-BcContainerAppInfo to be used without explicitely specifying -containerName $containerName, allowing just $containerName
Add new function Set-BcContainerServerConfiguration to directly configure settings of the Business Central Server instance (without needing Invoke-ScriptInBcContainer)
Add new function Restart-BcContainerServiceTier to restart only the service tier after configuration changes (often necessary)
Patch wrong version of Newtonsoft.json.dll in current insider builds (until this is fixed in the platform)

3.0.8
Add new function Get-ALGoAuthContext to get AL-Go for GitHub compatible auth context from bcAuthContext obtained from New-BcAuthContext