@@ -4,6 +4,7 @@ New function Invoke-gh for invoking GitHub CLI commands from PowerShell
 New function Invoke-git for invoking Git commands from PowerShell
 Display warning if DisabledTests contains codeunit with a comma in the name (not supported for disabling tests)
 Issue #2533 Import-BcContainerLicenseFile doesn't support secure URL's with query parameters
+Issue #2522 Invoke-ScriptInBCContainer with usePsSession False and a Function as Value for the Scriptblock Param fails
 
 3.0.10
 Issue #2457 Convert-BcAppsToRuntimePackages: allow to set showmycode, keepContainer, include sign app parameters
